--- a/foundations/odin-recipes/style.css
+++ b/foundations/odin-recipes/style.css
@@ -31,3 +31,11 @@ ul a {
     text-decoration: none;
     font-size: 24px;
 }
+
+/* Palette {
+    color: #101828; Rich Black;
+    color: #C39149; Lion;
+    color: #FAFAFF; Ghost White;
+    color: #E4D9FF; Periwinkle;
+    color: #7180AC; Glaucous;
+} */
