Add todo for later

--- a/foundations/odin-recipes/recipes/style.css
+++ b/foundations/odin-recipes/recipes/style.css
@@ -1,3 +1,7 @@
+/* TODO
+ADD MARGIN TO HOME LINK BOTTOM FOR PHONE
+MAKE THE INDEX PAGE CENTER WITHOUT EXPLICIT MARGIN AND MAKE IT RESPONSIVE */
+
 * {
    margin: 0;
    padding: 0;
