Fix index list responsive

--- a/foundations/odin-recipes/style.css
+++ b/foundations/odin-recipes/style.css
@@ -31,7 +31,7 @@ ul {
     text-align: left;
     list-style-position: inside;
     position: relative;
-    left: -120px;
+    left: -7%;
 }
 
 ul li {
