--- a/foundations/assignments/css/flexbox/style.css
+++ b/foundations/assignments/css/flexbox/style.css
@@ -8,9 +8,38 @@
   color: #fff;
   background-color: #5995DA;  /* Blue */
   padding: 20px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .menu {
   border: 1px solid #fff;  /* For debugging */
   width: 900px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.links {
+    /* border: 1px solid #fff; */
+    display: flex;
+    justify-content: flex-end;
+}
+
+.login {
+    margin-left: 20px;
+}
+
+.header-container {
+    color: #5995DA;
+    background-color: #D6E9FE;
+    display: flex;
+    justify-content: center;
+}
+
+.header {
+    width: 900px;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
