--- a/foundations/landing-page/style.css
+++ b/foundations/landing-page/style.css
@@ -72,3 +72,30 @@ button {
     border-radius: 8px;
     border: 0;
 }
+
+.info {
+    margin-bottom: 400px; /* REMOVE ME */
+    padding: 50px 0;
+}
+
+.info-title {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.info-box {
+    border: 4px #3882f6 solid;
+    border-radius: 20px;
+    width: 175px;
+    height: 175px;
+    flex: 0 1 auto;
+}
