--- a/foundations/landing-page/style.css
+++ b/foundations/landing-page/style.css
@@ -64,6 +64,12 @@ li a {
     color: #e5e7eb;
 }
 
+span {
+    font-weight: 700;
+    background-color: #6f2937;
+    padding: 0 7px;
+}
+
 button {
     background-color: #3882f6;
     color: #fff;
