--- a/foundations/landing-page/style.css
+++ b/foundations/landing-page/style.css
@@ -5,6 +5,12 @@
     font-family: Roboto, sans-serif;
 }
 
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 header {
     display: flex;
     justify-content: space-between;
